<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_budget_title"
        android:hint="@string/form_budget_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:background="@android:drawable/editbox_background_normal"/>

    <EditText
        android:id="@+id/et_budget_amount"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/form_budget_amount"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background_normal"/>

    <EditText
        android:id="@+id/et_budget_date_from"
        android:layout_marginBottom="10dp"
        android:hint="@string/form_date_from"
        android:inputType="none"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background_normal"/>

    <EditText
        android:id="@+id/et_budget_date_to"
        android:layout_marginBottom="10dp"
        android:textColorHint="@color/gray"
        android:inputType="none"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background_normal"/>

    <EditText
        android:id="@+id/et_budget_detail"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:hint="@string/form_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background_normal"/>

</LinearLayout>