<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".InputBudgetActivity">

    <EditText
        android:id="@+id/et_budget_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:drawable/editbox_background_normal"
        android:hint="@string/form_budget_title"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/budget_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:entries="@array/budget_category"
        android:background="@color/light_gray"
        app:layout_constraintEnd_toEndOf="@+id/et_budget_title"
        app:layout_constraintStart_toStartOf="@+id/et_budget_title"
        app:layout_constraintTop_toBottomOf="@+id/et_budget_title" />

    <Spinner
        android:background="@color/light_gray"
        android:id="@+id/budget_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:entries="@array/budget_type"
        app:layout_constraintEnd_toEndOf="@+id/budget_category"
        app:layout_constraintStart_toStartOf="@+id/budget_category"
        app:layout_constraintTop_toBottomOf="@+id/budget_category" />

    <EditText
        android:id="@+id/et_budget_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/editbox_background_normal"
        android:hint="@string/form_budget_amount"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="@+id/budget_type"
        app:layout_constraintStart_toStartOf="@+id/budget_type"
        app:layout_constraintTop_toBottomOf="@+id/budget_type" />

    <EditText
        android:id="@+id/et_budget_date_from"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/editbox_background_normal"
        android:hint="@string/form_date_from"
        android:inputType="none"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="@+id/et_budget_amount"
        app:layout_constraintStart_toStartOf="@+id/et_budget_amount"
        app:layout_constraintTop_toBottomOf="@+id/et_budget_amount" />

    <EditText
        android:id="@+id/et_budget_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/editbox_background_normal"
        android:hint="@string/form_details"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="@+id/et_budget_date_from"
        app:layout_constraintStart_toStartOf="@+id/et_budget_date_from"
        app:layout_constraintTop_toBottomOf="@+id/et_budget_date_from" />

    <Button
        android:id="@+id/button_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/bg_layout_home"
        android:paddingHorizontal="10dp"
        android:text="@string/button_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_budget_detail" />

    <View
        android:id="@+id/break_between_button"
        android:layout_width="fill_parent"
        android:layout_height="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_confirm" />

</androidx.constraintlayout.widget.ConstraintLayout>